# JK_Henry_Invest

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
docs/: 01_scenarios.md  02_requirements.md  03_design.md
pages/: 1_포트폴리오_생성.py  2_IB_가이드.py  3_VR_가이드.py  3_체결_입력.py  4_매매_일지.py  5_통계.py  6_포트폴리오_관리.py
src/jkhenry/: config.py
src/jkhenry/domain/: enums.py  models.py
src/jkhenry/market/: price_provider.py
src/jkhenry/repository/: db.py  repositories.py  session_store.py
src/jkhenry/services/: guide_service.py
src/jkhenry/strategies/: infinite_buying.py  value_rebalancing.py
src/jkhenry/ui/: components.py  style.py
tests/: test_infinite_buying.py  test_value_rebalancing.py
