[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jkhenry-invest"
version = "0.1.0"
description = "무한매수법 IB (Infinite Buying) / 밸류 리밸런싱 VR (Value Rebalancing) 매매 가이드"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "yfinance>=0.2.40",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
